force-app/main/default/objects/Statement_Detail__c/Statement_Detail__c.object-meta.xml
<CustomObject>
    <label>Invoice Detail</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>