force-app/main/default/objects/Statement_Detail__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>