force-app/main/default/objects/Statement_Detail__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Unapplied Cash</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Facture</fullName>
            </value>
            <value>
                <fullName>Montant non appliqué</fullName>
            </value>
            <value>
                <fullName>Note de crédit</fullName>
            </value>
            <value>
                <fullName>Prépayé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>