force-app/main/default/objects/Statement_Detail__c/fields/OrderBy__c.field-meta.xml
<CustomField>
    <fullName>OrderBy__c</fullName>
    <externalId>true</externalId>
    <label>OrderBy</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>