force-app/main/default/objects/Statement_Detail__c/fields/Statement__c.field-meta.xml
<CustomField>
    <fullName>Statement__c</fullName>
    <label>Statement</label>
    <referenceTo>Statement__c</referenceTo>
    <relationshipName>Statement_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>