force-app/main/default/objects/Statement_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Statement__c</columns>
    <columns>OrderBy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>